--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "start" : "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -20,4 +21,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1"
   }
+  
+  "engines":{
+"node" : ">=10.0.0"
+}
 }
